added structs to swagger
