# Chat/transport/rest/direct_message_reaction.go
@@ -10,15 +10,19 @@ import (
 )
 
 // Swagger API Documentation
-// @Summary adds a reaction to a direct message
-// @Description adds a reaction to a direct message.
-// @Tags Direct Message Reaction
-// @Accept  json
-// @Produce  json
-// @Param messageId path string true "The id of the message"
-// @Success 200 {object} string
-// @Failure 400 {object} string
-// @Router /messages/{messageId}/react [get]
+//
+//	@Summary		adds a reaction to a direct message
+//	@Description	adds a reaction to a direct message.
+//	@Tags			Direct Message Reaction
+//	@Accept			json
+//	@Produce		json
+//
+//	@Param			reaction	body		messageservice.Reaction	true	"reaction"
+//
+//	@Param			messageId	path		string					true	"The id of the message"
+//	@Success		200			{object}	string
+//	@Failure		400			{object}	string
+//	@Router			/messages/{messageId}/react [get]
 func (rest *Rest) addDirectMessageReaction(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 
@@ -46,15 +50,19 @@ func (rest *Rest) addDirectMessageReaction(w http.ResponseWriter, r *http.Reques
 }
 
 // Swagger API Documentation
-// @Summary change a reaction to a direct message
-// @Description changes a reaction to a direct message.
-// @Tags Direct Message Reaction
-// @Accept  json
-// @Produce  json
-// @Param messageId path string true "The id of the message"
-// @Success 200 {object} string
-// @Failure 400 {object} string
-// @Router /messages/{messageId}/react [put]
+//
+//	@Summary		change a reaction to a direct message
+//	@Description	changes a reaction to a direct message.
+//	@Tags			Direct Message Reaction
+//	@Accept			json
+//	@Produce		json
+//
+//	@Param			reaction	body		messageservice.Reaction	true	"reaction"
+//
+//	@Param			messageId	path		string					true	"The id of the message"
+//	@Success		200			{object}	string
+//	@Failure		400			{object}	string
+//	@Router			/messages/{messageId}/react [put]
 func (rest *Rest) changeDirectMessageReaction(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 
@@ -82,15 +90,16 @@ func (rest *Rest) changeDirectMessageReaction(w http.ResponseWriter, r *http.Req
 }
 
 // Swagger API Documentation
-// @Summary delete a reaction to a direct message
-// @Description delete a reaction to a direct message.
-// @Tags Direct Message Reaction
-// @Accept  json
-// @Produce  json
-// @Param messageId path string true "The id of the message"
-// @Success 200 {object} string
-// @Failure 400 {object} string
-// @Router /messages/{messageId}/react [delete]
+//
+//	@Summary		delete a reaction to a direct message
+//	@Description	delete a reaction to a direct message.
+//	@Tags			Direct Message Reaction
+//	@Accept			json
+//	@Produce		json
+//	@Param			messageId	path		string	true	"The id of the message"
+//	@Success		200			{object}	string
+//	@Failure		400			{object}	string
+//	@Router			/messages/{messageId}/react [delete]
 func (rest *Rest) deleteDirectMessageReaction(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 
