# Chat/transport/rest/group_messages.go
@@ -10,15 +10,16 @@ import (
 )
 
 // Swagger API Documentation
-// @Summary get all messages from a group
-// @Description get all messages from a group.
-// @Tags Group Messages
-// @Accept  json
-// @Produce  json
-// @Param groupId path string true "groupId"
-// @Success 200 {object} string
-// @Failure 400 {object} string
-// @Router /group/{groupId}/messages [delete]
+//
+//	@Summary		get all messages from a group
+//	@Description	get all messages from a group.
+//	@Tags			Group Messages
+//	@Accept			json
+//	@Produce		json
+//	@Param			groupId	path		string	true	"groupId"
+//	@Success		200		{object}	string
+//	@Failure		400		{object}	string
+//	@Router			/group/{groupId}/messages [delete]
 func (rest *Rest) getGroupMessages(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 
@@ -39,15 +40,19 @@ func (rest *Rest) getGroupMessages(w http.ResponseWriter, r *http.Request) {
 }
 
 // Swagger API Documentation
-// @Summary send a message to a group
-// @Description send a message to a group.
-// @Tags Group Messages
-// @Accept  json
-// @Produce  json
-// @Param groupId path string true "groupId"
-// @Success 200 {object} string
-// @Failure 400 {object} string
-// @Router /group/{groupId}/messages [post]
+//
+//	@Summary		send a message to a group
+//	@Description	send a message to a group.
+//	@Tags			Group Messages
+//	@Accept			json
+//	@Produce		json
+//
+//	@Param			message	body		groupmessageservice.Message	true	"message"
+//
+//	@Param			groupId	path		string						true	"groupId"
+//	@Success		200		{object}	string
+//	@Failure		400		{object}	string
+//	@Router			/group/{groupId}/messages [post]
 func (rest *Rest) sendGroupMessage(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 
@@ -71,16 +76,20 @@ func (rest *Rest) sendGroupMessage(w http.ResponseWriter, r *http.Request) {
 }
 
 // Swagger API Documentation
-// @Summary replace a message in a group
-// @Description replace a message in a group.
-// @Tags Group Messages
-// @Accept  json
-// @Produce  json
-// @Param groupId path string true "groupId"
-// @Param messageId path string true "messageId"
-// @Success 200 {object} string
-// @Failure 400 {object} string
-// @Router /group/{groupId}/messages/{messageId} [put]
+//
+//	@Summary		replace a message in a group
+//	@Description	replace a message in a group.
+//	@Tags			Group Messages
+//	@Accept			json
+//	@Produce		json
+//
+//	@Param			message		body		groupmessageservice.Message	true	"message"
+//
+//	@Param			groupId		path		string						true	"groupId"
+//	@Param			messageId	path		string						true	"messageId"
+//	@Success		200			{object}	string
+//	@Failure		400			{object}	string
+//	@Router			/group/{groupId}/messages/{messageId} [put]
 func (rest *Rest) replaceGroupMessage(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 
@@ -104,16 +113,17 @@ func (rest *Rest) replaceGroupMessage(w http.ResponseWriter, r *http.Request) {
 }
 
 // Swagger API Documentation
-// @Summary replace a message in a group
-// @Description replace a message in a group.
-// @Tags Group Messages
-// @Accept  json
-// @Produce  json
-// @Param groupId path string true "groupId"
-// @Param messageId path string true "messageId"
-// @Success 200 {object} string
-// @Failure 400 {object} string
-// @Router /group/{groupId}/messages/{messageId} [delete]
+//
+//	@Summary		replace a message in a group
+//	@Description	replace a message in a group.
+//	@Tags			Group Messages
+//	@Accept			json
+//	@Produce		json
+//	@Param			groupId		path		string	true	"groupId"
+//	@Param			messageId	path		string	true	"messageId"
+//	@Success		200			{object}	string
+//	@Failure		400			{object}	string
+//	@Router			/group/{groupId}/messages/{messageId} [delete]
 func (rest *Rest) deleteGroupMessage(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 
