# Chat/transport/rest/groups.go
@@ -10,14 +10,15 @@ import (
 )
 
 // Swagger API Documentation
-// @Summary get all groups a user can access
-// @Description get all groups a user can access.
-// @Tags Groups
-// @Accept  json
-// @Produce  json
-// @Success 200 {object} string
-// @Failure 400 {object} string
-// @Router /groups [get]
+//
+//	@Summary		get all groups a user can access
+//	@Description	get all groups a user can access.
+//	@Tags			Groups
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	string
+//	@Failure		400	{object}	string
+//	@Router			/groups [get]
 func (rest *Rest) getGroups(w http.ResponseWriter, r *http.Request) {
 	id, err := uuid.Parse(r.Header.Get("userId"))
 	if err != nil {
@@ -34,14 +35,18 @@ func (rest *Rest) getGroups(w http.ResponseWriter, r *http.Request) {
 }
 
 // Swagger API Documentation
-// @Summary create a group
-// @Description create a group.
-// @Tags Groups
-// @Accept  json
-// @Produce  json
-// @Success 200 {object} string
-// @Failure 400 {object} string
-// @Router /groups [post]
+//
+//	@Summary		create a group
+//	@Description	create a group.
+//	@Tags			Groups
+//	@Accept			json
+//	@Produce		json
+//
+//	@Param			group	body		groupservice.Group	true	"Group"
+//
+//	@Success		200		{object}	string
+//	@Failure		400		{object}	string
+//	@Router			/groups [post]
 func (rest *Rest) createGroup(w http.ResponseWriter, r *http.Request) {
 	id, err := uuid.Parse(r.Header.Get("userId"))
 	if err != nil {
@@ -65,15 +70,19 @@ func (rest *Rest) createGroup(w http.ResponseWriter, r *http.Request) {
 }
 
 // Swagger API Documentation
-// @Summary edit a Group
-// @Description edit a Group.
-// @Tags Groups
-// @Accept  json
-// @Produce  json
-// @Param groupId path string true "Group ID"
-// @Success 200 {object} string
-// @Failure 400 {object} string
-// @Router /groups/{groupId} [patch]
+//
+//	@Summary		edit a Group
+//	@Description	edit a Group.
+//	@Tags			Groups
+//	@Accept			json
+//	@Produce		json
+//
+//	@Param			group	body		groupservice.Group	true	"Group"
+//
+//	@Param			groupId	path		string				true	"Group ID"
+//	@Success		200		{object}	string
+//	@Failure		400		{object}	string
+//	@Router			/groups/{groupId} [patch]
 func (rest *Rest) editGroup(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 
@@ -100,15 +109,16 @@ func (rest *Rest) editGroup(w http.ResponseWriter, r *http.Request) {
 }
 
 // Swagger API Documentation
-// @Summary delete a Group
-// @Description delete a Group.
-// @Tags Groups
-// @Accept  json
-// @Produce  json
-// @Param groupId path string true "Group ID"
-// @Success 200 {object} string
-// @Failure 400 {object} string
-// @Router /groups/{groupId} [delete]
+//
+//	@Summary		delete a Group
+//	@Description	delete a Group.
+//	@Tags			Groups
+//	@Accept			json
+//	@Produce		json
+//	@Param			groupId	path		string	true	"Group ID"
+//	@Success		200		{object}	string
+//	@Failure		400		{object}	string
+//	@Router			/groups/{groupId} [delete]
 func (rest *Rest) deleteGroup(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 
@@ -129,15 +139,16 @@ func (rest *Rest) deleteGroup(w http.ResponseWriter, r *http.Request) {
 }
 
 // Swagger API Documentation
-// @Summary add a user to a Group
-// @Description add a user to a Group.
-// @Tags Groups
-// @Accept  json
-// @Produce  json
-// @Param groupId path string true "Group ID"
-// @Success 200 {object} string
-// @Failure 400 {object} string
-// @Router /groups/{groupId}/users [post]
+//
+//	@Summary		add a user to a Group
+//	@Description	add a user to a Group.
+//	@Tags			Groups
+//	@Accept			json
+//	@Produce		json
+//	@Param			groupId	path		string	true	"Group ID"
+//	@Success		200		{object}	string
+//	@Failure		400		{object}	string
+//	@Router			/groups/{groupId}/users [post]
 func (rest *Rest) addUserToGroup(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 
@@ -162,15 +173,16 @@ func (rest *Rest) addUserToGroup(w http.ResponseWriter, r *http.Request) {
 }
 
 // Swagger API Documentation
-// @Summary remove a user from a Group
-// @Description remove a user from a Group.
-// @Tags Groups
-// @Accept  json
-// @Produce  json
-// @Param groupId path string true "Group ID"
-// @Success 200 {object} string
-// @Failure 400 {object} string
-// @Router /groups/{groupId}/users/{userId} [delete]
+//
+//	@Summary		remove a user from a Group
+//	@Description	remove a user from a Group.
+//	@Tags			Groups
+//	@Accept			json
+//	@Produce		json
+//	@Param			groupId	path		string	true	"Group ID"
+//	@Success		200		{object}	string
+//	@Failure		400		{object}	string
+//	@Router			/groups/{groupId}/users/{userId} [delete]
 func (rest *Rest) removeUserFromGroup(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	id, err := uuid.Parse(r.Header.Get("userId"))
